--- a/configall.htm
+++ b/configall.htm
@@ -146,7 +146,8 @@ span.f_Heading1 { color: black; }
 <p style="text-indent: 10px;">База данных пациентов находится на удаленном сервере.</p>
 <p>На сервере должна быть организована папка с общим доступом и названием<span style="font-weight: bold; color: #000080;"> BasePTC</span>. </p>
 <p>Доступ к этой папке должен быть прописан в сетевых подключениях на клиентских компьютерах под буквой <span style="font-weight: bold; color: #000080;">P:</span><br />
-<span style="font-weight: bold; color: #000080;">\\имя сервера\BasePTC</span> или<span style="font-weight: bold; color: #000080;"> \\сетевой адрес сервера\BasePTC,</span> &nbsp;например,<span style="font-weight: bold; color: #000080;"> \\192.168.1.24\BasePTC</span>.</p>
+<span style="font-weight: bold; color: #000080;">\\имя сервера\BasePTC</span> или<span style="font-weight: bold; color: #000080;"> \\сетевой адрес сервера\BasePTC.</span>  </p>
+<p>На пример,<span style="font-weight: bold; color: #000080;"> \\192.168.1.24\BasePTC</span>.</p>
 <p>&nbsp;</p>
 <p style="text-indent: 11px;">В папке <span style="font-weight: bold; color: #000080;">BasePTC</span> обязательно присутствует база данных с наименованием <span style="font-weight: bold; color: #000080;"> BasePTC.mdb,  </span>а также папка с наименованием <span style="font-weight: bold; color: #000080;">P_DATA.</span></p>
 <p>&nbsp;</p>
