--- a/configexe.htm
+++ b/configexe.htm
@@ -143,7 +143,8 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p> &nbsp; Директория, в которой находится исполняемый файл  <span style="font-weight: bold; color: #000080;">dicom2fmm.exe</span>, содержит конфигурационный файл<span style="font-style: italic; font-weight: bold;"> </span><span class="f_BodyText"> </span><span style="font-weight: bold; color: #000080;">dicom2fmm.exe.config,</span> который определяет конфигурацию рабочей среды программы. </p>
+<p> &nbsp; Директория, в которой находится исполняемый файл  <span style="font-weight: bold; color: #000080;">dicom2fmm.exe</span>, содержит конфигурационный файл<span style="font-style: italic; font-weight: bold;"> </span><span class="f_BodyText"> </span><span style="font-weight: bold; color: #000080;">dicom2fmm.exe.config,</span> </p>
+<p>который определяет конфигурацию рабочей среды программы. </p>
 <p>&nbsp;</p>
 <p>В нём задаётся <a href="configdb.htm" class="topiclink">строка соединения с Базой данных</a>, тип <a href="spr_units.htm" class="topiclink">преобразования DICOM-&gt;FMM</a>, язык интерфейса программы.</p>
 <p>&nbsp;</p>
