--- a/contouredit.htm
+++ b/contouredit.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 12px;">Для выбора типа контура необходимо кликнуть мышкой на поле<span style="font-weight: bold;"> &quot;Тип контура&quot;</span>. </p>
+<p style="text-indent: 12px;">Для выбора типа контура необходимо кликнуть мышкой на поле<span style="font-weight: bold; color: #000080;"> &quot;Тип контура&quot;</span>. </p>
 <p style="text-indent: 12px;">После этого появится нисподающее меню со списком всех типов контуров, из которого необходимо выбрать тип, соответствующий заданному контуру.  </p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><img src="contours2.png" width="550" height="470" alt="contours2" style="border:none" /></p>
