--- a/dathistdiff.htm
+++ b/dathistdiff.htm
@@ -159,8 +159,8 @@ span.f_Heading1 { color: black; }
 <p style="text-indent: -2px; margin: 0px 0px 0px 36px;">&nbsp;<br />
 Ниже приведён пример несовпадения томограмм.<br />
 На несовпадение указывает наличие красной области на верхнем-правом изображении,</p>
-<p style="text-indent: 34px;">а также большое значение (<span style="font-weight: bold;">485.0</span>) в синей гистограмме разницы.</p>
-<p style="text-indent: 34px;">Это значение не должно превышать<span style="font-weight: bold;"> ~100</span>.</p>
+<p style="text-indent: 34px;">а также большое значение (<span style="font-weight: bold; color: #000080;">485.0</span>) в синей гистограмме разницы.</p>
+<p style="text-indent: 34px;">Это значение не должно превышать<span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">~100</span>.</p>
 <p style="text-indent: 34px;">&nbsp;</p>
 <div class="p_Heading2_atoc_" style="text-indent: 94px; border-top: none; border-right: none; border-left: none;"><table style="border-spacing:0;border:none;width:805px"><tr><td><a href="datdiff2.png"><img id="TOGGLE0186A2" class="image-toggle" src="datdiff2_zoom60.png" style="border:none" alt="Пример несовпадения томограмм" title="Пример несовпадения томограмм" /></a></td></tr><tr><td style="text-align:center;padding:0px 0px 0px 0px"><span class="f_Heading2_atoc_">Пример несовпадения томограмм</span></td></tr></table></div>
 <p>&nbsp;</p>
