--- a/diffdicom-dat.htm
+++ b/diffdicom-dat.htm
@@ -140,13 +140,13 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 9px;">Размеры входного <span style="font-weight: bold;">DICOM</span> и <span style="font-weight: bold;">DAT</span> файлов должны совпадать.При несовпадении размеров выдаётся следующее сообщение.</p>
+<p style="text-indent: 9px;">Размеры входного <span style="font-weight: bold; color: #000080;">DICOM</span> и <span style="font-weight: bold; color: #000080;">DAT</span> файлов должны совпадать.При несовпадении размеров выдаётся следующее сообщение.</p>
 <p style="text-indent: 9px;">&nbsp;</p>
 <p>&nbsp;</p>
 <div style="text-align: center;"><div style="margin:0px auto 0px auto;width:357px;padding:0px 0px 0px 0px"><img src="dicomdatdiff1.png" width="357" height="166" style="border:none" alt="Несовпадение размеров DICOM, DAT томограмм" title="Несовпадение размеров DICOM, DAT томограмм" /><p style="text-align:center"><span class="f_ImageCaption">Сообщение о несовпадении размеров томограмм</span></p></div></div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>Необходимо закрыть программу и в программе <span style="font-weight: bold;">Plan </span><img src="hm_clip0003_zoom50.png" width="47" height="40" alt="HM_clip0003" style="border:none" /><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial;">  </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">выбрать другую </span><span style="font-weight: bold;">DAT</span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;"> томограмму с правильными размерами.</span></p>
+<p>Необходимо закрыть программу и в программе <span style="font-weight: bold; color: #000080;">Plan</span><span style="font-weight: bold;"> </span><img src="hm_clip0003_zoom50.png" width="47" height="40" alt="HM_clip0003" style="border:none" /><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial;">  </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">выбрать другую </span><span style="font-weight: bold; color: #000080;">DAT</span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;"> томограмму с правильными размерами.</span></p>
 <p>&nbsp;</p>
 
 <!--ZOOMSTOP-->
