--- a/doseedit.htm
+++ b/doseedit.htm
@@ -143,9 +143,9 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 11px;">Редактирование дозы &nbsp;осуществляется путём введения необходимой величины в поле <span style="font-weight: bold;">&quot;Доза (Gy)&quot;.</span></p>
+<p style="text-indent: 11px;">Редактирование дозы &nbsp;осуществляется путём введения необходимой величины в поле <span style="font-weight: bold; color: #000080;">&quot;Доза (Gy)&quot;</span><span style="font-weight: bold;">.</span></p>
 <p>Редактирование дозы возможно только для таких типов контуров, как  </p>
-<p style="text-indent: 12px;"><span style="font-weight: bold;">&quot;Опухоль&quot;</span>, <span style="font-weight: bold;">&quot;Критический орган с допустимой дозой&quot;</span>, <span style="font-weight: bold;">&quot;Критическая зона с дозой и отступом&quot;.</span></p>
+<p style="text-indent: 12px;"><span style="font-weight: bold; color: #000080;">&quot;Опухоль&quot;</span><span style="color: #000080;">, </span><span style="font-weight: bold; color: #000080;">&quot;Критический орган с допустимой дозой&quot;</span><span style="color: #000080;">, </span><span style="font-weight: bold; color: #000080;">&quot;Критическая зона с дозой и отступом</span><span style="font-weight: bold;">&quot;.</span></p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><img src="contours3.png" width="550" height="470" alt="contours3" style="border:none" /></p>
 <p>&nbsp;</p>
