--- a/error.htm
+++ b/error.htm
@@ -154,7 +154,7 @@ span.f_Heading1 { color: black; }
 <div style="text-indent: 132px;"><div style="width:563px;padding:0px"><img src="error1.png" width="563" height="161" style="border:none" alt="Сообщения о неисправимой ошибке" title="Сообщения о неисправимой ошибке" /><p style="text-align:center"><span class="f_ImageCaption">Сообщения о неисправимой ошибке<br/>
 </span></p></div></div>
 <p style="text-indent: 2px;">&nbsp;</p>
-<p style="text-indent: -193px; margin: 0px 0px 0px 193px;"> &nbsp; По поводу исправления ошибок, вопросов, пожеланий, можно связаться с разработчиком по адресу: <span style="font-weight: bold;">valeriy.onuchin@yandex.ru </span></p>
+<p style="text-indent: -193px; margin: 0px 0px 0px 193px;"> &nbsp; По поводу исправления ошибок, вопросов, пожеланий, можно связаться с разработчиком по адресу: <span style="font-weight: bold; color: #000080;">valeriy.onuchin@ya.ru</span><span style="font-weight: bold;"> </span></p>
 
 <!--ZOOMSTOP-->
 </div></div>
