--- a/finish.htm
+++ b/finish.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 11px;">После создания FMM файла появляется финальный диалог</p>
+<p style="text-indent: 11px;">После создания  <a href="fmmfile.htm" class="topiclink">FMM файла</a> появляется финальный диалог</p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><img src="datproc6.png" width="713" height="478" alt="DatProc6" style="border:none" /></p>
 <p>&nbsp;</p>
@@ -151,7 +151,7 @@ span.f_Heading1 { color: black; }
 <p style="text-indent: 12px;"><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">и завершить программу с записью или без записи в базу данных.</span><br />
 <span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">&nbsp;</span><br />
 <span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;"> &nbsp; Для проверки корректности созданного файла необходимо загрузить этот файл из базы данных в программу </span></p>
-<p style="text-indent: 12px;"><span style="font-weight: bold;">&quot;Система планирования протонной лучевой терапии&quot;.</span><br />
+<p style="text-indent: 12px;"><span style="font-weight: bold; color: #000080;">&quot;Система планирования протонной лучевой терапии&quot;</span><span style="font-weight: bold;">.</span><br />
 <span style="font-weight: bold;">&nbsp;</span><br />
 <span style="font-weight: bold;">&nbsp;</span></p>
 
