--- a/hm_bright.htm
+++ b/hm_bright.htm
@@ -143,13 +143,13 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: -13px; margin: 0px 0px 0px 13px;"> &nbsp; Изменение <span style="font-weight: bold;">яркости-контрастности</span> производится либо при активировании кнопки <img src="brightbtn.png" width="84" height="78" alt="BrightBtn" style="float:left;margin:0px 0px 0px 0px; border:none" /></p>
-<p style="text-indent: -13px; margin: 0px 0px 0px 13px;"><span class="f_ImageCaption"> &nbsp; </span>на панели инструментов, либо при нажатии клавиши &quot;<span style="font-weight: bold;">Ctrl&quot;</span></p>
+<p style="text-indent: -13px; margin: 0px 0px 0px 13px;"> &nbsp; Изменение <span style="font-weight: bold; color: #000080;">яркости-контрастности</span> производится либо при активировании кнопки <img src="brightbtn.png" width="84" height="78" alt="BrightBtn" style="float:left;margin:0px 0px 0px 0px; border:none" /></p>
+<p style="text-indent: -13px; margin: 0px 0px 0px 13px;"><span class="f_ImageCaption"> &nbsp; </span>на панели инструментов, либо при нажатии клавиши <span style="color: #000080;">&quot;</span><span style="font-weight: bold; color: #000080;">Ctrl&quot;</span></p>
 <p style="text-indent: 10px;">&nbsp;</p>
 <p style="text-indent: 10px;">&nbsp;</p>
 <p style="text-indent: 10px;">&nbsp;</p>
 <p style="text-indent: 10px;">&nbsp;</p>
-<p style="text-indent: 10px;">Нажмите клавишу &quot;<span style="font-weight: bold;">Ctrl&quot;</span>.<span style="font-weight: bold;"> </span></p>
+<p style="text-indent: 10px;">Нажмите клавишу <span style="color: #000080;">&quot;</span><span style="font-weight: bold; color: #000080;">Ctrl&quot;</span>.<span style="font-weight: bold;"> </span></p>
 <p style="text-indent: 10px;">Должен появится курсор<span style="font-weight: bold;"> </span><img src="sun.png" width="32" height="32" alt="sun" style="border:none" /></p>
 <p style="text-indent: 9px;">Удерживайте левую кнопку мыши нажатой.</p>
 <p style="text-indent: 9px;">При движении в горизонтальном направлении  появится курсор <img src="contrast-increase.png" width="32" height="32" alt="Contrast-increase" style="border:none" /><br />
@@ -158,7 +158,7 @@ span.f_Heading1 { color: black; }
 <p style="text-indent: 12px;">&nbsp;</p>
 <p style="text-indent: 12px;">То же самое - при нажатии кнопок со стрелочками:</p>
 <p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 12px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span>Влево/вправо - изменение контрастности</p><p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 12px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span>Вверх/вниз - изменение яркости</p><p style="text-indent: -12px; margin: 0px 0px 0px 12px;">&nbsp;<br />
-Для возвращения к нормальному размеру достаточно нажать клавишу <span style="font-weight: bold;">&quot;Esc&quot;</span>, </p>
+Для возвращения к нормальному размеру достаточно нажать клавишу <span style="font-weight: bold; color: #000080;">&quot;Esc&quot;</span>, </p>
 <p style="text-indent: -131px; margin: 0px 0px 0px 141px;"> или по двойному клику левой кнопки мыши.<br />
 &nbsp;<br />
 &nbsp;<br />
