--- a/hm_gallery.htm
+++ b/hm_gallery.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 12px;"><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">Режим просмотра </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold;">&quot;Галерея&quot;</span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;"> отображает аксиальные слои томограммы ввиде мозаики/матрицы </span></p>
+<p style="text-indent: 12px;"><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">Режим просмотра </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold; color: #000080;">&quot;Галерея&quot;</span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;"> отображает аксиальные слои томограммы ввиде мозаики/матрицы </span></p>
 <p><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">уменьшенных изображений (эскизов) слоёв томограммы.</span></p>
 <p><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">Щелкнув на изображение, оно будет отображенно в просмотрщике томограмм. </span><br />
 <span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">&nbsp;</span></p>
