--- a/hm_heeteak.htm
+++ b/hm_heeteak.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 11px;">Это преобразование описано в статье <span style="font-weight: bold;">&quot;Evaluation of Computed Tomography Scanners for Feasibility of Using Averaged Houndsfield Unit-to-Stopping Power Ratio Calibration Curve&quot;</span>,</p>
+<p style="text-indent: 11px;">Это преобразование описано в статье<span style="color: #000080;"> </span><span style="font-weight: bold; color: #000080;">&quot;Evaluation of Computed Tomography Scanners for Feasibility of Using Averaged Houndsfield Unit-to-Stopping Power Ratio Calibration Curve&quot;</span>,</p>
 <p style="text-indent: 12px;">Heeteak Chung, et al - Int. Journal of Particle Therapy 2018 (<a href="https://theijpt.org/doi/full/10.14338/IJPT-17-0035.1)" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink">https://theijpt.org/doi/full/10.14338/IJPT-17-0035.1)</a></p>
 <p>&nbsp;</p>
 <p style="margin: 0px 0px 0px 96px;">Кривая преобразования приведена на рисунке ниже.<br />
