--- a/hm_histos.htm
+++ b/hm_histos.htm
@@ -143,9 +143,9 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p><span style="font-weight: bold;"> &nbsp; &nbsp;Гистограммы срезов </span>отображают значения величин томограммы вдоль секущей плоскости.</p>
+<p><span style="font-weight: bold;"> &nbsp; </span><span style="font-weight: bold; color: #000080;"> Гистограммы срезов</span><span style="font-weight: bold;"> </span>отображают значения величин томограммы вдоль секущей плоскости.</p>
 <p>Щёлкните левой кнопкой мыши в точку, в которой необходимо сделать сечение срезов.<br />
-Когда кнопка отпускается, вдоль линий пересечения строятся <span style="font-weight: bold;">гистограммы срезов</span>.<br />
+Когда кнопка отпускается, вдоль линий пересечения строятся <span style="font-weight: bold; color: #000080;">гистограммы срезов</span>.<br />
 &nbsp;</p>
 <p style="text-indent: -106px; margin: 0px 0px 0px 107px;">&nbsp;<br />
 <img src="hists1.png" width="512" height="249" alt="Hists1" style="border:none" /><br />
@@ -158,10 +158,10 @@ span.f_Heading1 { color: black; }
 <span class="f_ImageCaption"> &nbsp; <img src="hists2.png" width="248" height="94" alt="hists2" style="border:none" /></span><br />
 <span class="f_ImageCaption">&nbsp;</span></p>
 <p style="margin: 0px 0px 0px 4px;">&nbsp;</p>
-<p style="margin: 0px 0px 0px 4px;"> Режим масштабирования и лупы активируется нажатием клавиши<span style="font-weight: bold;"> &quot;Shift&quot;</span></p>
-<p>После того, как пользователь нажмет клавишу <span style="font-weight: bold;">&quot;Shift&quot;</span>, указатель мыши изменится на<span style="font-weight: bold;"> </span><img src="pluscursor32.png" width="22" height="22" alt="plusCursor32" style="border:none" /><br />
+<p style="margin: 0px 0px 0px 4px;"> Режим масштабирования и лупы активируется нажатием клавиши<span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">&quot;Shift&quot;</span></p>
+<p>После того, как пользователь нажмет клавишу <span style="font-weight: bold; color: #000080;">&quot;Shift&quot;</span>, указатель мыши изменится на<span style="font-weight: bold;"> </span><img src="pluscursor32.png" width="22" height="22" alt="plusCursor32" style="border:none" /><br />
 Затем переместите указатель мыши в область диаграммы, <br />
-которую необходимо увеличить, и щелкните левой кнопкой мыши (удерживая клавишу <span style="font-weight: bold;">&quot;Shift&quot;</span>). <br />
+которую необходимо увеличить, и щелкните левой кнопкой мыши (удерживая клавишу <span style="font-weight: bold; color: #000080;">&quot;Shift&quot;</span>). <br />
 Гистограмма будет увеличена.</p>
 <p style="text-indent: -83px; margin: 0px 0px 0px 107px;">&nbsp;<br />
 <img src="hists3.png" width="248" height="94" alt="Hists3" style="border:none" /><br />
@@ -170,7 +170,7 @@ span.f_Heading1 { color: black; }
 <img src="hists4.png" width="248" height="94" alt="Hists4" style="border:none" /></p>
 <p>&nbsp;<br />
 &nbsp;<br />
- &nbsp;Для того чтобы сбросить режим масштабирования необходимо нажать клавишу <span style="font-weight: bold;"> &quot;Alt&quot;</span>, </p>
+ &nbsp;Для того чтобы сбросить режим масштабирования необходимо нажать клавишу <span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">&quot;Alt&quot;</span>, </p>
 <p>указатель мыши изменится на<span style="font-weight: bold;"> </span><img src="minuscursor32.png" width="22" height="22" alt="MinusCursor32" style="border:none" /><br />
 <span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">Щелчок левой клавиши мыши сбрасывает режим масштабирования.</span></p>
 
