--- a/hm_mprview.htm
+++ b/hm_mprview.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p> &nbsp; Окно <span style="font-weight: bold;">Мультипланарной реконструкции</span> содержит три окна просмотра изображений. </p>
+<p> &nbsp; Окно <span style="font-weight: bold; color: #000080;">Мультипланарной реконструкции</span> содержит три окна просмотра изображений. </p>
 <p>На левом нижнем &nbsp;располагается аксиальная плоскость, над ней — фронтальная/коронольная, &nbsp;на правом — сагиттальная ,.</p>
 <p>&nbsp;</p>
 <p> &nbsp; Просмотр изображений в каждом из трёх окон аналогичен просмотру плоских изображений. </p>
