--- a/hm_schneider.htm
+++ b/hm_schneider.htm
@@ -144,7 +144,7 @@ span.f_Heading1 { color: black; }
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
 <p style="text-indent: 19px;">Это преобразование описано в статье </p>
-<p style="text-indent: 19px;"><a href="https://iopscience.iop.org/article/10.1088/0031-9155/41/1/009/meta" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="&quot;The calibration of CT Houndsfield units for radiotherapy treatment planning&quot;">&quot;</a><span style="font-weight: bold;"><a href="https://iopscience.iop.org/article/10.1088/0031-9155/41/1/009/meta" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="&quot;The calibration of CT Houndsfield units for radiotherapy treatment planning&quot;">The calibration of CT Houndsfield units for radiotherapy treatment planning&quot;</a></span></p>
+<p style="text-indent: 19px;"><a href="https://iopscience.iop.org/article/10.1088/0031-9155/41/1/009/meta" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="&quot;The calibration of CT Houndsfield units for radiotherapy treatment planning&quot;">&quot;</a><a href="https://iopscience.iop.org/article/10.1088/0031-9155/41/1/009/meta" target="_blank" onclick="return HMTrackTopiclink(this);" class="weblink" title="&quot;The calibration of CT Houndsfield units for radiotherapy treatment planning&quot;">The calibration of CT Houndsfield units for radiotherapy treatment planning&quot;</a></p>
 <p style="text-indent: 19px;">Uwe Schneider, et al (Schneider - Phys Med. Biol. 41 (1996) 111-124) </p>
 <p style="text-indent: 19px;">&nbsp;</p>
 <p style="text-indent: 19px;">Кривая преобразования приведена на рисунке ниже.</p>
