--- a/hm_topic.htm
+++ b/hm_topic.htm
@@ -143,16 +143,16 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 10px;">Режим масштабирования активируется нажатием клавиши<span style="font-weight: bold;"> &quot;Shift&quot;, </span>указатель мыши изменится на<span style="font-weight: bold;"> </span><img src="pluscursor32.png" width="22" height="22" alt="plusCursor32" style="border:none" /></p>
+<p style="text-indent: 10px;">Режим масштабирования активируется нажатием клавиши<span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">&quot;Shift&quot;</span><span style="font-weight: bold;">, </span>указатель мыши изменится на<span style="font-weight: bold;"> </span><img src="pluscursor32.png" width="22" height="22" alt="plusCursor32" style="border:none" /></p>
 <p>&nbsp;<br />
 Масштабирование производится вращением колеса мыши:</p>
 <p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span>от себя — увеличивает изображение, </p><p style="text-align: left; padding: 0px 0px 0px 13px; margin: 0px 0px 0px 0px;"><span style="font-size:16px; font-family: 'Arial Unicode MS','Lucida Sans Unicode','Arial';color:#000000;display:inline-block;width:13px;margin-left:-13px">&#8226;</span>на себя — уменьшает. </p><p>&nbsp;<br />
-А также комбинациями клавиш <span style="font-weight: bold;">&quot;Shift+&quot;, &quot;Shift-&quot;, &quot;Shift↑&quot;, &nbsp;&quot;Shift↓&quot;, &quot;Shift&lt;-&quot;, &quot;Shift-&gt;&quot;</span><br />
+А также комбинациями клавиш <span style="font-weight: bold; color: #000080;">&quot;Shift+&quot;, &quot;Shift-&quot;, &quot;Shift↑&quot;, &nbsp;&quot;Shift↓&quot;, &quot;Shift&lt;-&quot;, &quot;Shift-&gt;</span><span style="font-weight: bold;">&quot;</span><br />
 <span style="font-weight: bold;">&nbsp;</span></p>
 <p>Указатель мыши показывает, &nbsp;увеличено <img src="pluscursor32.png" width="22" height="22" alt="plusCursor32" style="border:none" />, </p>
 <p>или уменьшено <img src="minuscursor32.png" width="22" height="22" alt="MinusCursor32" style="border:none" /> изображение относительно изначального размера.</p>
 <p>&nbsp;</p>
-<p style="text-indent: -136px; margin: 0px 0px 0px 137px;"> Для возвращения к нормальному размеру достаточно нажать клавишу <span style="font-weight: bold;">&quot;Esc&quot;</span>, </p>
+<p style="text-indent: -136px; margin: 0px 0px 0px 137px;"> Для возвращения к нормальному размеру достаточно нажать клавишу <span style="font-weight: bold; color: #000080;">&quot;Esc&quot;</span>, </p>
 <p style="text-indent: -137px; margin: 0px 0px 0px 137px;">или по двойному клику левой кнопки мыши.<br />
 &nbsp;<br />
 &nbsp;<br />
