--- a/hm_value.htm
+++ b/hm_value.htm
@@ -149,21 +149,21 @@ span.f_Heading1 { color: black; }
 <a href="rule1.png"><img id="TOGGLE0186A1" class="image-toggle" src="rule1_zoom80.png" alt="rule1_zoom80" style="border:none" /></a><br />
 &nbsp;<br />
 &nbsp;<br />
-<span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">Для измерения величины томограммы и координаты в конкретной точке необходимо </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold;">&quot;Включить умную подсказку&quot;</span><br />
+<span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">Для измерения величины томограммы и координаты в конкретной точке необходимо </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold; color: #000080;">&quot;Включить умную подсказку&quot;</span><br />
 <span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">Для этого необходимо нажать правую кнопку мыши после чего появится контекстное меню и </span><br />
-<span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">выбрать </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold;">&quot;Включить умную подсказку&quot;</span></p>
+<span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">выбрать </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold; color: #000080;">&quot;Включить умную подсказку&quot;</span></p>
 <p style="text-indent: 78px; margin: 0px 0px 0px 225px;">&nbsp;<br />
 <img src="inittooltip.png" width="288" height="116" alt="initToolTip" style="border:none" /><br />
 &nbsp;</p>
 <p>&nbsp;<br />
-<span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold;">&quot;Умная подсказка&quot; </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">будет отображать номер слоя, </span></p>
+<span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold; color: #000080;">&quot;Умная подсказка&quot;</span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal; font-weight: bold;"> </span><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">будет отображать номер слоя, </span></p>
 <p><span class="f_ImageCaption" style="font-size: 16px; font-family: Arial; font-style: normal;">координату указателя мыши и значение томограммы в этой точке.</span></p>
 <p style="margin: 0px 0px 0px 194px;">&nbsp;<br />
 <img src="mtooltip.png" width="383" height="201" alt="Mtooltip" style="border:none" /><br />
 &nbsp;</p>
 <p>&nbsp;</p>
-<p>Если курсор указывает на контур, то<span style="font-weight: bold;"> &quot;Умная подсказка&quot; </span>будет отображать его имя. </p>
-<p><span style="font-weight: bold;">&quot;Умная подсказка&quot;</span> может работать в режиме <a href="hm_topic.htm" class="topiclink">Масштабирования изображения. </a></p>
+<p>Если курсор указывает на контур, то<span style="font-weight: bold; color: #000080;"> &quot;Умная подсказка&quot;</span><span style="font-weight: bold;"> </span>будет отображать его имя. </p>
+<p><span style="font-weight: bold; color: #000080;">&quot;Умная подсказка&quot;</span><span style="color: #000080;"> </span>может работать в режиме <a href="hm_topic.htm" class="topiclink">Масштабирования изображения. </a></p>
 <p style="text-indent: -45px; margin: 0px 0px 0px 192px;">&nbsp;<br />
 <img src="tooltip2.png" width="396" height="191" alt="tooltip2" style="border:none" /><br />
 &nbsp;</p>
