--- a/html.htm
+++ b/html.htm
@@ -143,12 +143,12 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 14px;">Электронная справочная система содержит HTML версию данного руководства, а также удалённую веб страницу содержащую справочные материалы по программному обеспечению Комплекса протонной терапии <span style="font-weight: bold;">«ПРОМЕТЕУС»</span>.</p>
+<p style="text-indent: 14px;">Электронная справочная система содержит HTML версию данного руководства, а также удалённую веб страницу содержащую справочные материалы по программному обеспечению Комплекса протонной терапии <span style="font-weight: bold; color: #000080;">«ПРОМЕТЕУС»</span>.</p>
 <p>&nbsp;</p>
 <div style="text-indent: 86px;"><table style="border-spacing:0;border:none;width:896px"><tr><td><a href="userguide1.png"><img id="TOGGLE0186A1" class="image-toggle" src="userguide1_zoom60.png" style="border:none" alt="Электронный справочник" title="Электронный справочник" /></a></td></tr><tr><td style="text-align:center;padding:0px 0px 0px 0px"><span class="f_ImageCaption">Электронный справочник</span></td></tr></table></div>
 <p>&nbsp;</p>
 <p style="text-indent: 12px;">Электронная справочная система доступна из интерфейса просмотрщика и запускается при нажатии кнопки </p>
-<p style="text-indent: 12px;"><span style="font-weight: bold;">&quot;Электронный справочник&quot;</span>, либо клавиши  <span style="font-weight: bold;">F1</span>.</p>
+<p style="text-indent: 12px;"><span style="font-weight: bold; color: #000080;">&quot;Электронный справочник&quot;</span>, либо клавиши  <span style="font-weight: bold; color: #000080;">F1</span>.</p>
 <p style="text-indent: -11px; margin: 0px 0px 0px 298px;">&nbsp;<br />
 <img src="help11.png" width="222" height="171" alt="Help11" style="border:none" /></p>
 
