--- a/mprnavigator.htm
+++ b/mprnavigator.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: -54px; margin: 0px 0px 0px 65px;"><span style="font-weight: bold;"> Режим МПР навигатора</span> позволяет выбрать одну из секущих ортогональных плоскостей по номеру слоя.</p>
+<p style="text-indent: -54px; margin: 0px 0px 0px 65px;"><span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">Режим МПР навига</span><span style="font-weight: bold;">тора</span> позволяет выбрать одну из секущих ортогональных плоскостей по номеру слоя.</p>
 <p style="text-indent: -254px; margin: 0px 0px 0px 266px;">Это можно делать либо с помощью ползунка, либо устанавливая необходимое значение во числовом контроле.<br />
 &nbsp;<br />
 <img src="mprnav1.png" width="244" height="215" alt="MPRnav1" style="border:none" /><br />
