--- a/orient.htm
+++ b/orient.htm
@@ -143,20 +143,20 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 46px;">В стандарте <span style="font-weight: bold;">DICOM</span> для указания ориентации положения пациента в пространстве используются следующие </p>
+<p style="text-indent: 46px;">В стандарте <span style="font-weight: bold; color: #000080;">DICOM</span> для указания ориентации положения пациента в пространстве используются следующие </p>
 <p style="text-indent: 48px;">обозначения сторон трёхмерного кубика:<br />
 &nbsp;</p>
-<p style="text-indent: 77px;"> &nbsp; <span style="font-weight: bold;"> [R] - Right</span> - право.</p>
+<p style="text-indent: 77px;"> &nbsp; <span style="font-weight: bold; color: #000080;"> [R] - Rig</span><span style="font-weight: bold;">ht</span> - право.</p>
 <p style="text-indent: 77px;">&nbsp;</p>
-<p style="text-indent: 77px;"> &nbsp; <span style="font-weight: bold;"> [L] - Left</span> - лево.</p>
+<p style="text-indent: 77px;"> &nbsp; <span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">[L] - Left</span> - лево.</p>
 <p style="text-indent: 77px;">&nbsp;</p>
-<p style="text-indent: 77px;"> &nbsp;  <span style="font-weight: bold;">[A] - Anterior</span> - передний.</p>
+<p style="text-indent: 77px;"> &nbsp; <span style="color: #000080;"> </span><span style="font-weight: bold; color: #000080;">[A] - Anterior</span><span style="color: #000080;"> </span>- передний.</p>
 <p style="text-indent: 77px;">&nbsp;</p>
-<p style="text-indent: 77px;"> &nbsp; <span style="font-weight: bold;"> [P] - Posterior</span> - задний. </p>
+<p style="text-indent: 77px;"> &nbsp; <span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">[P] - Posterior</span> - задний. </p>
 <p style="text-indent: 77px;">&nbsp;</p>
-<p style="text-indent: 77px;"> &nbsp;  <span style="font-weight: bold;">[F] - Feet</span> - ноги. </p>
+<p style="text-indent: 77px;"> &nbsp; <span style="color: #000080;"> </span><span style="font-weight: bold; color: #000080;">[F] - Feet</span> - ноги. </p>
 <p style="text-indent: 77px;">&nbsp;</p>
-<p style="text-indent: 77px;"> &nbsp;  <span style="font-weight: bold;">[H] - Head</span> - голова.</p>
+<p style="text-indent: 77px;"> &nbsp; <span style="color: #000080;"> </span><span style="font-weight: bold; color: #000080;">[H] - Head</span> - голова.</p>
 <p style="text-indent: 57px;">&nbsp;</p>
 <p style="text-indent: 57px;">В программе <span style="font-weight: bold; color: #000080;">dicom2fmm.exe </span>эти названия были транслированы как</p>
 <p style="text-indent: 57px;">&nbsp;</p>
