--- a/zoom.htm
+++ b/zoom.htm
@@ -143,8 +143,8 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p> &nbsp;Режим <span style="font-weight: bold;">&quot;Лупа&quot;</span> производится либо при активировании кнопки <img src="zoombtn.png" width="57" height="64" alt="ZoomBtn" style="float:left;margin:0px 0px 0px 0px; border:none" /></p>
-<p>на панели инструментов, либо при нажатии клавиши <span style="font-weight: bold;">&quot;Shift&quot;</span>.</p>
+<p> &nbsp;Режим <span style="font-weight: bold; color: #000080;">&quot;Лупа&quot;</span> производится либо при активировании кнопки <img src="zoombtn.png" width="57" height="64" alt="ZoomBtn" style="float:left;margin:0px 0px 0px 0px; border:none" /></p>
+<p>на панели инструментов, либо при нажатии клавиши <span style="font-weight: bold; color: #000080;">&quot;Shift</span><span style="font-weight: bold;">&quot;</span>.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -156,7 +156,7 @@ span.f_Heading1 { color: black; }
 <p>позволяет осуществлять навигацию внутри увеличенной области изображения.<br />
 Указатель мыши в виде человеческой руки <img src="handopen.png" width="21" height="21" alt="HandOpen" style="border:none" />означает, что изображение увеличено в размерах. <br />
 &nbsp;<br />
- &nbsp;Для возвращения к нормальному размеру достаточно нажать клавишу <span style="font-weight: bold;">&quot;Esc&quot;</span>, </p>
+ &nbsp;Для возвращения к нормальному размеру достаточно нажать клавишу <span style="font-weight: bold; color: #000080;">&quot;Esc&quot;</span>, </p>
 <p>или по двойному клику левой кнопки мыши.</p>
 <p style="text-indent: -133px; margin: 0px 0px 0px 133px;">&nbsp;<br />
 &nbsp;</p>
