--- a/configdb.htm
+++ b/configdb.htm
@@ -146,12 +146,12 @@ span.f_Heading1 { color: black; }
 <h1 class="p_Heading1"> &nbsp; В базе данных хранятся все сведения о пациенте, о процессе лечения, а также ссылки на физические объекты, </h1>
 <h1 class="p_Heading1">такие, как томограммы (отснятые на установке и сторонние), объекты DICOM-RT (томограммы с оконтуренными зонами облучения), </h1>
 <h1 class="p_Heading1">созданные планы облучения, файлы с историей процесса лечения, фотографии пациента. </h1>
-<h1 class="p_Heading1" style="text-indent: 11px;">Физически все эти объекты располагаются в личной папке пациента по пути <span style="font-weight: bold;">P:\P_DATA\ФИО_ID</span></h1>
-<h1 class="p_Heading1">Здесь <span style="font-weight: bold;">ФИО</span> – фамилия, имя, отчество пациента подряд без пробелов, <span style="font-weight: bold;">ID</span> – идентификационный номер пациента в базе данных.</h1>
+<h1 class="p_Heading1" style="text-indent: 11px;">Физически все эти объекты располагаются в личной папке пациента по пути<span style="color: #000080;"> </span><span style="font-weight: bold; color: #000080;">P:\P_DATA\ФИО_ID</span></h1>
+<h1 class="p_Heading1">Здесь <span style="font-weight: bold; color: #000080;">ФИО</span> – фамилия, имя, отчество пациента подряд без пробелов, <span style="font-weight: bold; color: #000080;">ID</span> – идентификационный номер пациента в базе данных.</h1>
 <h1 class="p_Heading1"><span class="f_Heading1">&nbsp;</span></h1>
-<h1 class="p_Heading1">Пример<span style="font-weight: bold;">: P:\P_DATA\СертификатовФантомФантомович_302</span></h1>
+<h1 class="p_Heading1">Пример<span style="font-weight: bold;">: </span><span style="font-weight: bold; color: #000080;">P:\P_DATA\СертификатовФантомФантомович_302</span></h1>
 <h1 class="p_Heading1"><span class="f_Heading1">&nbsp;</span></h1>
-<h1 class="p_Heading1">Папка и все необходимые подпапки создаются в программе <span style="font-weight: bold;">«Автоматизированная история болезни» </span></h1>
+<h1 class="p_Heading1">Папка и все необходимые подпапки создаются в программе <span style="font-weight: bold; color: #000080;">«Автоматизированная история болезни» </span></h1>
 <h1 class="p_Heading1">автоматически при регистрации пациента.</h1>
 <h1 class="p_Heading1"><span class="f_Heading1">&nbsp;</span></h1>
 <h1 class="p_Heading1">Необходимо создать источники данных ODBC:</h1>
