--- a/dicomdatfusion.htm
+++ b/dicomdatfusion.htm
@@ -143,10 +143,10 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 12px;">Процедура совмещения  <span style="font-weight: bold;">DICOM-DAT</span> томограмм заключается во вращении/зеркальном отражении входной DICOM томограммы в <a href="geometry.htm" class="topiclink">аксиальной плоскости</a> с помощью кнопок: <span style="font-weight: bold;">&quot;+90&quot;, &quot;180&quot;, &quot;-90&quot;, &quot;Вертикально&quot;, &quot;Горизонтально&quot;.</span></p>
+<p style="text-indent: 12px;">Процедура совмещения  <span style="font-weight: bold; color: #000080;">DICOM-DAT</span> томограмм заключается во вращении/зеркальном отражении входной DICOM томограммы в <a href="geometry.htm" class="topiclink">аксиальной плоскости</a> с помощью кнопок: <span style="font-weight: bold; color: #000080;">&quot;+90&quot;, &quot;180&quot;, &quot;-90&quot;, &quot;Вертикально&quot;, &quot;Горизонтально&quot;</span><span style="font-weight: bold;">.</span></p>
 <p style="text-indent: 12px;">&nbsp;</p>
 <p style="text-indent: 12px;">Для верификации совпадения томограмм используется <a href="dathistdiff.htm" class="topiclink">процедура сравнения томограмм</a>.</p>
-<p> &nbsp; Окончательным этапом является создание <span style="font-weight: bold;">FMM</span> файла <a href="finish.htm" class="topiclink">с записью результата в Базу данных</a></p>
+<p> &nbsp; Окончательным этапом является создание <span style="font-weight: bold; color: #000080;">FMM</span> файла <a href="finish.htm" class="topiclink">с записью результата в Базу данных</a></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
