--- a/hm_file.htm
+++ b/hm_file.htm
@@ -146,7 +146,7 @@ span.f_Heading1 { color: black; }
 <p style="text-indent: 11px;">Это преобразование ещё не определено, но подразумевает возможность наличия собственной калибровочной кривой, </p>
 <p style="text-indent: 11px;">которая будет сохранятся в файле.</p>
 <p>&nbsp;</p>
-<p style="text-indent: 12px;">Предполагается, что <span style="font-weight: bold; color: #0000ff;">HU2FMM</span><span style="font-size: 13px; font-family: consolas; color: #0000ff;"> </span><span style="font-weight: bold; color: #ff0000;">value<a href="configexe.htm" class="topiclink"> в конфигурационном файле программы</a> </span>будет указывать на имя калибровочного файла.</p>
+<p style="text-indent: 12px;">Предполагается, что <span style="font-weight: bold; color: #000080;">HU2FMM</span><span style="font-size: 13px; font-family: consolas; color: #0000ff;"> </span><span style="font-weight: bold; color: #ff0000;">value<a href="configexe.htm" class="topiclink"> </a></span><span style="color: #ff0000;"><a href="configexe.htm" class="topiclink">в конфигурационном файле программы</a></span><span style="font-weight: bold; color: #ff0000;"> </span>будет указывать на имя калибровочного файла.</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
