--- a/hm_fmmdatdiff.htm
+++ b/hm_fmmdatdiff.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 12px;">Панель сравнения DICOM-DAT томограмм содержит окно <span style="font-weight: bold;">&quot;Наложения слоёв&quot;</span>, <span style="font-weight: bold;">&quot;Гистограмму разницы величин&quot;</span> </p>
+<p style="text-indent: 12px;">Панель сравнения DICOM-DAT томограмм содержит окно <span style="font-weight: bold; color: #000080;">&quot;Наложения слоёв&quot;</span><span style="color: #000080;">, </span><span style="font-weight: bold; color: #000080;">&quot;Гистограмму разницы величин&quot;</span><span style="color: #000080;"> </span></p>
 <p>для каждой из ортогональных секущих плоскостей, а также вкладку содержащую информацию о входных-выходных данных программы.<br />
 &nbsp;<br />
  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Ниже приведён пример несовпадения входной DICOM и DAT томограмм.</p>
