--- a/print.htm
+++ b/print.htm
@@ -143,7 +143,9 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: 14px;">Программа предоставляет инструмент поддержки печати, генерации отчётов и экспорта изображений. Он включает в себя предварительный просмотр печати с функциями масштабирования, поворотов, изменения размеров изображения и другими. </p>
+<p style="text-indent: 14px;">Программа предоставляет инструмент поддержки печати, генерации отчётов и экспорта изображений. </p>
+<p style="text-indent: 14px;">Он включает в себя предварительный просмотр печати с функциями масштабирования, поворотов, </p>
+<p style="text-indent: 14px;">изменения размеров изображения и другими. </p>
 <p>&nbsp;</p>
 <p style="text-indent: 12px;">Все эти функции представлены на панели инструментов.</p>
 <p style="text-indent: 12px;">&nbsp;</p>
@@ -153,7 +155,7 @@ span.f_Heading1 { color: black; }
 <p style="text-indent: 14px;">&nbsp;</p>
 <p style="text-align: center;"><img src="printexport.png" width="255" height="396" alt="PrintExport" style="border:none" /></p>
 <p>&nbsp;</p>
-<p>Печать активируется либо кнопкой<span style="font-weight: bold;"> &quot;Печать&quot;</span>, либо комбинацией клавиш<span style="font-weight: bold;"> Ctrl+P.</span></p>
+<p>Печать активируется либо кнопкой<span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">&quot;Печать&quot;</span>, либо комбинацией клавиш<span style="font-weight: bold;"> </span><span style="font-weight: bold; color: #000080;">Ctrl+P</span><span style="font-weight: bold;">.</span></p>
 <p style="text-align: center;">&nbsp;<br />
 <img src="print1.png" width="331" height="194" alt="Print1" style="border:none" /><br />
 &nbsp;<br />
