--- a/replay.htm
+++ b/replay.htm
@@ -143,7 +143,7 @@ span.f_Heading1 { color: black; }
 
 <div id="idcontent"><div id="innerdiv"> 
 <!--ZOOMRESTART-->
-<p style="text-indent: -3px; margin: 0px 0px 0px 26px;">Просмотрщик позволяет автоматически воспроизводить изображения серии со скоростью один или пять кадров в секунду. Для этого имеется <span style="font-weight: bold;">&quot;Проигрыватель&quot;</span>.</p>
+<p style="text-indent: -3px; margin: 0px 0px 0px 26px;">Просмотрщик позволяет автоматически воспроизводить изображения серии со скоростью один или пять кадров в секунду. Для этого имеется <span style="font-weight: bold; color: #000080;">&quot;Проигрыватель&quot;</span>.</p>
 <p style="text-indent: -3px; margin: 0px 0px 0px 26px;">&nbsp;</p>
 <p style="text-indent: 215px; margin: 0px 0px 0px 119px;"><img src="player1.png" width="150" height="29" alt="Player1" style="border:none" /></p>
 <p style="text-indent: 215px; margin: 0px 0px 0px 119px;">&nbsp;<br />
