--- a/dicom2fmm_kwindex.htm
+++ b/dicom2fmm_kwindex.htm
@@ -1,72 +1,50 @@
 <!DOCTYPE HTML>
 <html><head>
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <title>&nbsp;</title>
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
    <!-- This line includes the general project style sheet (not required) -->
-   <link type="text/css" href="styles.css" rel="stylesheet">
+   <link type="text/css" href="styles.css" rel="stylesheet" />
 
    <style type="text/css">
-       a { color: black; text-decoration: none }
-       a:visited {color: black}
-       a:hover { text-decoration: underline }
-       .navtitle    { font-size: 14pt; font-weight: bold; margin-bottom: 16px; }
-       .navbar      { font-size: 10pt; }
-       .idxsection  { font-family: Arial,Helvetica; font-weight: bold; font-size: 21px; color: #000000; text-decoration: none;
-                    margin-top: 15px; margin-bottom: 0px; }
-       .idxkeyword  { font-family: Arial,Helvetica; font-weight: normal; font-size: 15px; color: #000000; text-decoration: none }
-       .idxkeyword2 { font-family: Arial,Helvetica; font-weight: normal; font-size: 15px; color: #000000; text-decoration: none }
-       .idxlink     { font-family: Arial,Helvetica; font-weight: normal; font-size: 14px; color: #000000; text-decoration: none }
-       TABLE.idxtable { background: #F4F4F4; border-width: 1px; border-color: #000000; border-collapse: collapse;
-                        filter: progid:DXImageTransform.Microsoft.Shadow(color=B0B0B0, Direction=135, Strength=4) }
-       TD.idxtable    { background: #F4F4F4; }
-       span#navsearch {display: none;}
+       body { background:#FFF; }
+       .navbar      { font-size: 120%; }
+
+       #idx          { margin: 0; padding: 0; }     /* div tag that wraps the keyword index */
+       #idx a        { font-color: #000; text-decoration: none; }  /* all links in index appear as text */
+
+       #idx p             { margin: 2px; }       /* keywords and secondary keywords */
+       #idx p.idxkeyword2 { margin-left: 20px }  /* indentation for secondary keywords */
+
+       table.idxtable { background: #F4F4F4;
+                        border: 1px solid #000000;
+                        border-collapse: collapse;
+                        -moz-box-shadow: 2px 2px 2px #B0B0B0;
+                        -webkit-box-shadow: 2px 2px 2px #B0B0B0;
+                        box-shadow: 2px 2px 2px #B0B0B0;
+                        filter: progid:DXImageTransform.Microsoft.Shadow(color=B0B0B0, Direction=135, Strength=4); }
+       td.idxtable    { background: #F4F4F4; }
+
+       /* font definitions for keyword section, keywords and popup links */
+       .idxsection  { font-family: Arial,Helvetica; font-weight: bold; font-size: 14pt; color: #000000; text-decoration: none;
+                      margin-top: 15px; margin-bottom: 15px; }
+       .idxkeyword  { font-family: Arial,Helvetica; font-weight: normal; font-size: 10pt; color: #000000; text-decoration: none; }
+       .idxkeyword2 { font-family: Arial,Helvetica; font-weight: normal; font-size: 10pt; color: #000000; text-decoration: none; }
+       .idxlink     { font-family: Arial,Helvetica; font-weight: normal; font-size: 9pt; color: #000000; text-decoration: none; }
+
    </style>
-<!--[if lt IE 7]>
-<style type="text/css">
-html { overflow-x: hidden;} 
-</style> 
-<![endif]-->
    <script type="text/javascript" src="jquery.js"></script>
    <script type="text/javascript" src="helpman_settings.js"></script>
 </head>
-<body style="background-color: #FFFFFF; background-image: url(lines.gif); ">
-<p class="navtitle">&nbsp;</p>
-<p class="navbar">
-<a href="dicom2fmm_content.htm">Contents</a>&nbsp;
-|&nbsp;<b>Index</b>&nbsp;
-<span id="navsearch">|&nbsp;<a href="dicom2fmm_ftsearch.htm">Search</a></span>
-</p><hr size="1" />
+<body>
+<p class="navbar"><a href="dicom2fmm_content.htm">Contents</a>
+ | <b>Index</b>
+ | <a href="search.php">Search</a>
+</p>
+<hr/>
 
-<br/><a href="#A">A</a>
-  <a href="#B">B</a>
-  <a href="#C">C</a>
-  <a href="#D">D</a>
-  <a href="#E">E</a>
-  <a href="#F">F</a>
-  <a href="#G">G</a>
-  <a href="#H">H</a>
-  <a href="#I">I</a>
-  <a href="#J">J</a>
-  <a href="#K">K</a>
-  <a href="#L">L</a>
-  <a href="#M">M</a>
-  <a href="#N">N</a>
-  <a href="#O">O</a>
-  <a href="#P">P</a>
-  <a href="#Q">Q</a>
-  <a href="#R">R</a>
-  <a href="#S">S</a>
-  <a href="#T">T</a>
-  <a href="#U">U</a>
-  <a href="#V">V</a>
-  <a href="#W">W</a>
-  <a href="#X">X</a>
-  <a href="#Y">Y</a>
-  <a href="#Z">Z</a>
-
-<!-- Placeholder for the keyword index - this variable is REQUIRED! -->
-<script type="text/javascript">
+  <!-- Place holder for the keyword index - this variable is REQUIRED! -->
+  <script type="text/javascript">
 
   function hmInitHideLinks(cssCode) {
   	var styleElement = document.createElement("style");
@@ -129,38 +107,29 @@ function trackidx(obj) {
 </script>
 <div id="idx" style="margin:0;padding:0;border:none">
 <a name="F" id="F"></a><p class="idxsection">- F -</p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><a href="installprog.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">FAQ for upgraders</span></a></p>
+<p class="idxkeyword"><a href="installprog.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">FAQ for upgraders</span></a></p>
 <a name="H" id="H"></a><p class="idxsection">- H -</p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><span class="idxkeyword">Help &amp; Manual</span></p>
-<p class="idxkeyword2" style="margin:0 0 0 20px"><a href="quickstart.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword2">Quick Start Tutorials</span></a></p>
-<p class="idxkeyword2" style="margin:0 0 0 20px"><a href="dicom2fmmgui.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword2">user interface</span></a></p>
+<p class="idxkeyword"><span class="idxkeyword">Help &amp; Manual</span></p>
+<p class="idxkeyword2"><a href="quickstart.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword2">Quick Start Tutorials</span></a></p>
+<p class="idxkeyword2"><a href="dicom2fmmgui.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword2">user interface</span></a></p>
 <a name="P" id="P"></a><p class="idxsection">- P -</p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><span class="idxkeyword">projects</span></p>
-<p class="idxkeyword2" style="margin:0 0 0 20px"><a href="dat2fmmgui.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword2">creating</span></a></p>
+<p class="idxkeyword"><span class="idxkeyword">projects</span></p>
+<p class="idxkeyword2"><a href="dat2fmmgui.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword2">creating</span></a></p>
 <a name="Q" id="Q"></a><p class="idxsection">- Q -</p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><a href="dicom2fmmgui.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">Quick Search tool</span></a></p>
+<p class="idxkeyword"><a href="dicom2fmmgui.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">Quick Search tool</span></a></p>
 <a name="T" id="T"></a><p class="idxsection">- T -</p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><span class="idxkeyword">tutorials</span></p>
-<p class="idxkeyword2" style="margin:0 0 0 20px"><a href="quickstart.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword2">Quick Start</span></a></p>
+<p class="idxkeyword"><span class="idxkeyword">tutorials</span></p>
+<p class="idxkeyword2"><a href="quickstart.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword2">Quick Start</span></a></p>
 <a name="U" id="U"></a><p class="idxsection">- U -</p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><a href="dicom2fmmgui.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">user interface</span></a></p>
+<p class="idxkeyword"><a href="dicom2fmmgui.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">user interface</span></a></p>
 <a name="W" id="W"></a><p class="idxsection">- W -</p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><a href="basicinfo.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">welcome page</span></a></p>
+<p class="idxkeyword"><a href="basicinfo.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">welcome page</span></a></p>
 <a name="Z" id="Z"></a><p class="idxsection">- Z -</p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><a href="geometry.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">Ориентация положения пациента</span></a></p>
-<p class="idxkeyword" style="margin:0 0 0 0px"><a href="dat2fmm.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">Создание FMM файла</span></a></p>
+<p class="idxkeyword"><a href="geometry.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">Ориентация положения пациента</span></a></p>
+<p class="idxkeyword"><a href="dat2fmm.htm" target="hmcontent" onclick="return trackidx(this);"><span class="idxkeyword">Создание FMM файла</span></a></p>
 </div>
 
-<script type="text/javascript">
-document.getElementById("navsearch").style.display="inline";
-</script> 
+
 </body>
 </html>
-
-
-
-
-
-
-
 
